@@ -514,11 +514,15 @@ two unused pointers and a tag.
 @cindex allocation classes
 As we have seen, the field @code{gccls} in the header is three bits to
 label up to 8 classes of nodes.  Non-vector nodes are of class 0, and
-`small' vector nodes are of classes 1 to 6, with `large' vector nodes
-being of class 7.  The `small' vector nodes are able to store vector
-data of up to 8, 16, 32, 48, 64 and 128 bytes: larger vectors are
-@code{malloc}-ed individually whereas the `small' nodes are allocated
-from pages of about 2000 bytes.
+`small' vector nodes are of classes 1 to 5, with a class for custom
+allocator vector nodes 6 and `large' vector nodes being of class 7.  The
+`small' vector nodes are able to store vector data of up to 8, 16, 32,
+64 and 128 bytes: larger vectors are @code{malloc}-ed individually
+whereas the `small' nodes are allocated from pages of about 2000
+bytes. Vector nodes allocated using custom allocators (via
+@code{allocVector3}) are not counted in the gc memory usage statistics
+since their memory semantics is not under R's control and may be
+non-standard (e.g., memory could be partially shared across nodes).
 
 
 @node Environments and variable lookup, Attributes, SEXPs, R Internal Structures
